--- a/css/_ui-shell.scss
+++ b/css/_ui-shell.scss
@@ -217,6 +217,7 @@
   }
 
   .#{$prefix}--header-panel.#{$prefix}--header-panel {
+    overflow-y: auto;
     background-color: $layer;
     color: $text-secondary;
   }
